infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec: 
  rules:
    - host: cribplug.dev
      http:
        paths:
          - path: /api/v1/?(.*)
            pathType: Prefix
            backend: 
              service:
                name: cp-auth
                port: 
                  number: 3001
